# d5be-blog

./: .gitignore  Pipfile  package-lock.json  package.json  requirements.txt
backend/: .env.example  .gitignore  AGENTS.md  package-lock.json  pyproject.toml  tailwind.config.js
backend/apps/blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
backend/apps/blog/migrations/: 0001_initial.py  0005_post_author.py  0006_category.py  0008_alter_post_created_at.py  0009_post_category.py  0010_alter_post_slug.py  0012_post_is_featured.py  0015_post_tags.py  0016_alter_category_options.py  0017_rename_body_post_description_remove_post_created_at_and_more.py  0018_rename_post_recipe_and_more.py
backend/apps/users/: admin.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_profile_profile_pic.py  0003_alter_profile_options_profile_full_name_and_more.py  0004_alter_customuser_email.py
backend/config/: settings.py  urls.py  views.py
backend/docs/: Backend Tasks.md
backend/fixtures/: recipe_fixtures.json
backend/static/css/: styles.css
backend/static/src/: input.css
backend/templates/: base.html  index.html
backend/templates/account/: login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  profile.html  profile_edit.html  signup.html
backend/templates/account/email/: email_confirmation_message.html  email_confirmation_message.txt  email_confirmation_signup_message.html  email_confirmation_signup_message.txt
backend/templates/blog/: category_create.html  category_detail.html  post_list.html  post_list_class.html
backend/templates/partials/: header.html  pagination.html
backend/templates/recipe/: recipe_list.html
config/: urls.py  (+2 more)
(+35 files in other folders)
