[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-allauth>=65.17.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-seed>=0.3.1",
    "django-silk>=5.5.0",
    "django-stubs>=6.0.4",
    "django-taggit>=6.1.0",
    "django-tasks-db>=0.12.0",
    "django-widget-tweaks>=1.5.1",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "django-schematic>=1.3.13",
    "django-stubs>=6.0.4",
    "djangorestframework-stubs>=3.17.0",
]
